--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <script defer src="./src/index.js"></script>
+  <script src="./src/PlayerComponent.js"></script>
   <style>
     img {
       height: 300px;
